--- a/gp-presentation.tex
+++ b/gp-presentation.tex
@@ -4,7 +4,7 @@
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{graphicx}
 \usepackage{hyperref}
-\usepackage{geometry}
+\usepackage[landscape]{geometry}
 \usepackage{xcolor}
 
 \setlength{\topmargin}{0pt}
@@ -21,5 +21,7 @@
 \maketitle
 
 \section*{What We Did}
+
+    We evolved programs to solve the polynomial ideal membership problem. To 
 
 \end{document}
