--- a/gp-presentation.tex
+++ b/gp-presentation.tex
@@ -20,8 +20,19 @@
 \color{white}
 \maketitle
 
-\section*{What We Did}
+\section*{What is a monomial?}
 
-    We evolved programs to solve the polynomial ideal membership problem. To 
+    A monomial consists of a coefficient multiplied by the product of variables raised to non-negative powers.
+
+    Examples: $$x^2, xyz, 5x^4y^7z^2, \hdots$$
+
+\section*{What is a polynomial?}
+
+    A polynomial is a sum of monomials.
+
+    Examples: $$x^2 + y, z, xyz + 1 + 22x$$
+
+\newpage
+\section*{}
 
 \end{document}
