--- a/gp-presentation.tex
+++ b/gp-presentation.tex
@@ -4,7 +4,7 @@
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{graphicx}
 \usepackage{hyperref}
-\usepackage[landscape]{geometry}
+\usepackage[paperwidth=15.11in,paperheight=8.5in, margin=1in]{geometry}
 \usepackage{xcolor}
 
 \setlength{\topmargin}{0pt}
@@ -73,6 +73,15 @@ Polynomial - \\
 \newpage
 \section*{Parent Selection and Error Computation}
 
+
+\newpage
+\section*{Test Case Generation}
+
+\newpage
+\section*{Experimentation with Crossover}
+
+\newpage
+\section*{Experimentation with Modified Division}
 
 
 \end{document}
