--- a/gp-presentation.tex
+++ b/gp-presentation.tex
@@ -143,7 +143,7 @@ Polynomial - \\
 
  $$x < -25 \rightarrow 0 $$
  $$x > 25  \rightarrow 1 $$
- $$\rightarrow \frac{1}{1+e^{-x}}$$
+ $$x \rightarrow \frac{1}{1+e^{-x}}$$
 
 \noindent Smooth confidence predictions, within a bound to prevent endless competition. 
 
